Update welcome message in index.html

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
         <h1>Marianville Secondary School</h1>
         <div class="sub">Excellence • Community • Growth</div>
       </div>
-      <div class="sub">Welcome — Student options and resources</div>
+      <div class="sub">Welcome — Latest Info's - Registration Info's</div>
     </header>
 
     <nav class="nav" aria-label="Main navigation">
