Update students section heading and add download link

--- a/index.html
+++ b/index.html
@@ -267,9 +267,9 @@
       </div>
 
       <section id="students" class="card" aria-labelledby="students-heading">
-        <h3 id="students-heading" style="margin-top:0">These are students in option2</h3>
+        <h3 id="students-heading" style="margin-top:0">Registration Files for download will be uploaded soon</h3>
         <ol style="margin:0 0 0 1.15rem">
-          <li>Dorothy Migile</li>
+        <a href="" download> Record Cards </a> 
           <li>Josepha Gondo</li>
         </ol>
       </section>
