Change image source to empty for portability
Updated image source to be empty for better portability.

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 
       <div class="profile" style="margin-bottom:12px">
         <!-- Use a relative path or place 'apple2.jpeg' alongside this HTML for portability -->
-        <img src="/Users/luis/Desktop/apple2.jpeg" alt="Apple image" />
+        <img src= "">
         <div class="meta">
           <strong>Option 2 students</strong>
           <p style="margin:.35rem 0 0 0">Short description or welcome message for Option 2.</p>
