Fix image source for Marianville logo

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 
     <main>
       <h2 id="section1">Section 1 — Option overview</h2>
-  <img src = "#Marianvillelogo.jpg"> 
+  <img src = "MarianvilleLogo.jpg"> 
       <div class="profile" style="margin-bottom:12px">
         <!-- Use a relative path or place 'apple2.jpeg' alongside this HTML for portability -->
         <img src= "">
