--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
   <img src = "MarianvilleLogo.jpg"> 
       <div class="profile" style="margin-bottom:12px">
         <!-- Use a relative path or place 'apple2.jpeg' alongside this HTML for portability -->
-        <img src= "">
+        <img src= "main/Marianville-Secondary-School/MarianvilleLogo.jpg">
         <div class="meta">
           <strong>Option 2 students</strong>
           <p style="margin:.35rem 0 0 0">Short description or welcome message for Option 2.</p>
