--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
   <div class="site" role="document">
     <header>
       <div>
-          <img src= "main/Marianville-Secondary-School/MarianvilleLogo.jpg">
+          <img src= "MarianvilleLogo.jpg">
         <h1>Marianville Secondary School</h1>
         <div class="sub">Excellence • Community • Growth</div>
       </div>
