Remove duplicate logo image from index.html

--- a/index.html
+++ b/index.html
@@ -238,8 +238,9 @@
 <body>
   <div class="site" role="document">
     <header>
+       <img src= "MarianvilleLogo.jpg" alt="Logo">
       <div>
-          <img src= "MarianvilleLogo.jpg">
+         
         <h1>Marianville Secondary School</h1>
         <div class="sub">Excellence • Community • Growth</div>
       </div>
