Update index.html with latest news and links

--- a/index.html
+++ b/index.html
@@ -261,37 +261,35 @@
   <img src = "MarianvilleLogo.jpg"> 
       <div class="profile" style="margin-bottom:12px">
         <!-- Use a relative path or place 'apple2.jpeg' alongside this HTML for portability -->
-        <img src= "main/Marianville-Secondary-School/MarianvilleLogo.jpg">
-        <div class="meta">
-          <strong>Option 2 students</strong>
-          <p style="margin:.35rem 0 0 0">Short description or welcome message for Option 2.</p>
+        
+          <strong>Latest News</strong>
+          <p style="margin:.35rem 0 0 0">School ends in 5th of October 2025. School will commence in 19th of January</p>
         </div>
       </div>
 
       <section id="students" class="card" aria-labelledby="students-heading">
         <h3 id="students-heading" style="margin-top:0">Registration Files for download will be uploaded soon</h3>
         <ol style="margin:0 0 0 1.15rem">
-        <a href="" download> Record Cards </a> 
-          <li>Josepha Gondo</li>
+        
         </ol>
       </section>
     </main>
 
     <aside>
       <h4 style="margin:0 0 8px 0">Navigation / Quick Info</h4>
-      <p>This is the nav bar area for quick links and resources.</p>
+      <p>Quick links and resources.</p>
       <div class="card links" style="margin-top:10px">
         <strong>Useful links</strong>
         <ul class="list-reset" style="margin-top:8px">
-          <li><a href="#" aria-label="School portal">School Portal</a></li>
-          <li><a href="#" aria-label="Library">Library</a></li>
+          <li><a href="#" aria-label="School portal">Registration Information</a></li>
+          <li><a href="#" aria-label="Library">Contact</a></li>
         </ul>
       </div>
     </aside>
 
     <footer>
       <div>© Marianville Secondary School</div>
-      <div class="sub">Design system • Responsive grid</div>
+      <div class="sub">Design by Luis Marampau</div>
     </footer>
   </div>
 </body>
