--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       -moz-osx-font-smoothing:grayscale;
       line-height:1.45;
       padding:32px 16px;
-      display:flex;
+      display:grid;
       justify-content:center;
     }
 
