--- a/index.html
+++ b/index.html
@@ -71,14 +71,14 @@
       -moz-osx-font-smoothing:grayscale;
       line-height:1.45;
       padding:32px 16px;
-      display:grid;
+      display:flex;
       justify-content:center;
     }
 
     .site{
       width:100%;
       max-width:var(--max-width);
-      display:grid;
+      display:flex;
       grid-template-columns: repeat(12, 1fr);
       gap:var(--gap);
       align-items:start;
