--- a/index.html
+++ b/index.html
@@ -71,14 +71,14 @@
       -moz-osx-font-smoothing:grayscale;
       line-height:1.45;
       padding:32px 16px;
-      display:flex;
+      display:grid;
       justify-content:center;
     }
 
     .site{
       width:100%;
       max-width:var(--max-width);
-      display:flex;
+      display:grid;
       grid-template-columns: repeat(12, 1fr);
       gap:var(--gap);
       align-items:start;
@@ -90,7 +90,7 @@
       background: var(--glass);
       border-radius: var(--radius);
       padding:20px 24px;
-      display:flex;
+      display:grid;
       justify-content:space-between;
       align-items:center;
       box-shadow: var(--shadow);
@@ -121,7 +121,7 @@
       list-style:none;
       margin:0;
       padding:0;
-      display:flex;
+      display:grid;
       flex-direction:column;
       gap:10px;
     }
