--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     .site{
       width:100%;
       max-width:var(--max-width);
-      display:grid;
+      display:flex;
       grid-template-columns: repeat(12, 1fr);
       gap:var(--gap);
       align-items:start;
