--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
       font-size:1.1rem;
     }
     .profile{
-      display:flex;
+      display:grid;
       gap:16px;
       align-items:center;
     }
