--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -17,46 +18,6 @@
       --radius: 12px;
       --shadow: 0 8px 20px rgba(16,24,40,0.08);
       --glass: linear-gradient(135deg, rgba(255,255,255,0.6), rgba(255,255,255,0.3));
-    }
-
-    /* Animations */
-    @keyframes fadeInUp {
-      0% { opacity: 0; transform: translateY(32px);}
-      100% { opacity: 1; transform: translateY(0);}
-    }
-    @keyframes fadeIn {
-      0% { opacity: 0;}
-      100% { opacity: 1;}
-    }
-    @keyframes imgReveal {
-      0% { opacity: 0; transform: scale(0.92);}
-      60% { opacity: 0.6;}
-      100% { opacity: 1; transform: scale(1);}
-    }
-
-    /* Add initial state for animation targets. */
-    header, nav.nav, main, aside, footer {
-      opacity: 0;
-      transform: translateY(32px);
-      animation: fadeInUp 1.1s cubic-bezier(.23,.66,.65,1) forwards;
-    }
-    header { animation-delay: 0.09s; }
-    nav.nav { animation-delay: 0.18s; }
-    main { animation-delay: 0.27s;}
-    aside { animation-delay: 0.36s;}
-    footer { animation-delay: 0.45s;}
-
-    /* Profile img reveal animation */
-    .profile img {
-      opacity: 0;
-      transform: scale(0.92);
-      animation: imgReveal 1.3s cubic-bezier(.3,1.15,.4,1) 0.52s forwards;
-    }
-
-    /* Animate cards/links inside aside */
-    aside .card {
-      opacity: 0;
-      animation: fadeIn 1.1s cubic-bezier(.23,.66,.65,1) 0.62s forwards;
     }
 
     /* Global reset & type */
@@ -132,16 +93,13 @@
       color:var(--accent);
       text-decoration:none;
       font-weight:600;
-      transition:all .18s ease, transform 0.18s ease;
+      transition:all .18s ease;
       border:1px solid transparent;
-      /* For animation */
-      will-change: transform;
     }
     nav.nav a:hover{
       background: linear-gradient(90deg, rgba(107,33,168,0.06), rgba(154,230,180,0.06));
-      transform: translateX(4px) scale(1.06);
+      transform:translateX(4px);
       border-color: rgba(107,33,168,0.08);
-      box-shadow: 0 2px 8px rgba(107,33,168,0.07);
     }
 
     /* Main content spans columns 3-10 */
@@ -198,39 +156,11 @@
     }
 
     /* Utility */
-    /* Buttons */
-    .btn{
-      display:inline-flex;
-      align-items:center;
-      justify-content:center;
-      gap:8px;
-      padding:8px 12px;
-      border-radius:8px;
-      border:1px solid transparent;
-      background:var(--accent);
-      color:#fff;
-      font-weight:600;
-      text-decoration:none;
-      cursor:pointer;
-    }
-    .btn.secondary{
-      background:transparent;
-      color:var(--accent);
-      border-color:rgba(107,33,168,0.08);
-    }
     .card{
       background:#fff;
       padding:12px;
       border-radius:10px;
       border:1px solid rgba(16,24,40,0.03);
-      transition: box-shadow 0.25s cubic-bezier(.23,.66,.65,1), transform 0.16s ease;
-    }
-    .card.links a{
-      transition: color 0.15s, transform 0.23s cubic-bezier(.26,2,.54,1.23);
-    }
-    .card.links a:hover{
-      color: var(--accent);
-      transform: scale(1.08);
     }
     .list-reset{margin:0;padding:0;list-style:none}
     .links a{color:var(--accent);text-decoration:none}
@@ -258,21 +188,19 @@
 <body>
   <div class="site" role="document">
     <header>
+      <img src ="MarianvilleLogo.jpg"> 
       <div>
         <h1>Marianville Secondary School</h1>
         <div class="sub">Excellence • Community • Growth</div>
       </div>
-      <div style="display:flex;align-items:center;gap:12px">
-        <div class="sub">Welcome — Student options and resources</div>
-        <a href="contact.html" class="btn" aria-label="Contact us">Contact Us</a>
-      </div>
+      <div class="sub">Welcome to the Marianville Webpage 2025</div>
     </header>
 
     <nav class="nav" aria-label="Main navigation">
       <ul>
-        <li><a href="#section1">Option 1</a></li>
-        <li><a href="#section2">Option 2</a></li>
-        <li><a href="#students">Students</a></li>
+        <li><a href="www.google.com">Google</a></li>
+        <li><a href="www.youtube.com">Youtube</a></li>
+        <li><a href="#www.facebook.com">Facebook</a></li>
         <li><a href="https://www.google.com" target="_blank" rel="noopener">External: Google</a></li>
       </ul>
     </nav>
@@ -282,7 +210,7 @@
 
       <div class="profile" style="margin-bottom:12px">
         <!-- Use a relative path or place 'apple2.jpeg' alongside this HTML for portability -->
-        <img src="/Users/luis/Desktop/apple2.jpeg" alt="Apple image" />
+        <img src="MarianvilleLogo.jpg" alt="Marianville Logo Image" />
         <div class="meta">
           <strong>Option 2 students</strong>
           <p style="margin:.35rem 0 0 0">Short description or welcome message for Option 2.</p>
@@ -290,32 +218,35 @@
       </div>
 
       <section id="students" class="card" aria-labelledby="students-heading">
-        <h3 id="students-heading" style="margin-top:0">These are students in option2</h3>
+        <h3 id="students-heading" style="margin-top:0">Registration Information to be Posted Soon</h3>
         <ol style="margin:0 0 0 1.15rem">
-          <li>Dorothy Migile</li>
-          <li>Josepha Gondo</li>
+        <li>School ends at 5th December 2025</li>
+          <li>School Commences: 19 January 2026</li>
         </ol>
       </section>
     </main>
 
     <aside>
       <h4 style="margin:0 0 8px 0">Navigation / Quick Info</h4>
-      <p>This is the nav bar area for quick links and resources.</p>
+      <p>Quick links and resources.</p>
       <div class="card links" style="margin-top:10px">
         <strong>Useful links</strong>
         <ul class="list-reset" style="margin-top:8px">
-          <li><a href="#" aria-label="School portal">School Portal</a></li>
-          <li><a href="#" aria-label="Library">Library</a></li>
-          <li><a href="contact.html" aria-label="Contact page">Contact Us</a></li>
+          <li><a href="#" aria-label="School portal">Registration Information</a></li>
+          <li><a href="#" aria-label="Library">Registration Forms</a></li>
         </ul>
-      </div
-      
+      </div>
     </aside>
-<a href="" download> Record Cards </a> 
+
     <footer>
       <div>© Marianville Secondary School</div>
-      <div class="sub">Design system • Responsive grid</div>
+      <div class="sub">Design system • Designed by Luis Marampau</div>
     </footer>
   </div>
 </body>
 </html>
+
+
+
+
+
