--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 <body>
   <div class="site" role="document">
     <header>
-      <img src ="MarianvilleLogo.jpg"> 
+      <img src ="Marianville-Secondary-School/MarianvilleLogo.jpg"> 
       <div>
         <h1>Marianville Secondary School</h1>
         <div class="sub">Excellence • Community • Growth</div>
