--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Marianville Secondary School — Layout</title>
+  <link a href="contact.html"> 
 
   <style>
     :root{
