added contact us page

--- a/index.html
+++ b/index.html
@@ -235,6 +235,7 @@
         <ul class="list-reset" style="margin-top:8px">
           <li><a href="#" aria-label="School portal">Registration Information</a></li>
           <li><a href="#" aria-label="Library">Registration Forms</a></li>
+          <li><a href="contact.html" aria-label="Contact">Contact Us</a></li>
         </ul>
       </div>
     </aside>
