--- a/index.html
+++ b/index.html
@@ -234,7 +234,8 @@
         <ul class="list-reset" style="margin-top:8px">
           <li><a href="#" aria-label="School portal">Registration Information</a></li>
           <li><a href="#" aria-label="Library">Registration Forms</a></li>
-          <li><a href="contact.html" aria-label="Contact page">Contact Us</a></li>
+          <a href="contact.html" aria-label="Contact page">Contact Us</a>
+          <a href="contact.html">← Go to contact</a>
         </ul>
       </div>
     </aside>
