--- a/contact.html
+++ b/contact.html
@@ -91,7 +91,7 @@
       const payload = { name, email, message };
 
       // Try server endpoint first (explicit URL for local testing)
-      const API_URL = 'http://localhost:3000/api/contact';
+      const API_URL = 'https://.functions.supabase.co/contact_form_submit';
       try{
         const resp = await fetch(API_URL, {
           method: 'POST',
