--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 <body>
   <div class="site" role="document">
     <header>
-      <img src ="Marianville-Secondary-School/MarianvilleLogo.jpg"> 
+      <img src ="MarianvilleLogo.jpg"> 
       <div>
         <h1>Marianville Secondary School</h1>
         <div class="sub">Excellence • Community • Growth</div>
@@ -212,8 +212,9 @@
         <!-- Use a relative path or place 'apple2.jpeg' alongside this HTML for portability -->
         <img src="MarianvilleLogo.jpg" alt="Marianville Logo Image" />
         <div class="meta">
-          <strong>Option 2 students</strong>
-          <p style="margin:.35rem 0 0 0">Short description or welcome message for Option 2.</p>
+          <strong>Parents * Guardians* Students</strong>
+          <p style="margin:.35rem 0 0 0">Welcome to Marianville Secondary School Website. This page is created for Registration Purpose.
+          Registration Information and Forms will be posted here. </p>
         </div>
       </div>
 
