Remove './' from Library link in index.html

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
         <strong>Useful links</strong>
         <ul class="list-reset" style="margin-top:8px">
           <li><a href="#" aria-label="School portal">Registration Information</a></li>
-          <li><a href="./form_styled.php" aria-label="Library">Registration Forms</a></li>
+          <li><a href="form_styled.php" aria-label="Library">Registration Forms</a></li>
           <a href="contact.html" aria-label="Contact page">Contact-Us</a>
          
         </ul>
