--- a/form.html
+++ b/form.html
@@ -5,6 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form - Marianville Secondary School</title>
     <style>
+        :root{
+  --bg: #f5f7fb;
+  --card: #ffffff;
+  --muted: #6b7280;
+  --accent: #0ea5a4; /* teal */
+  --accent-600: #0b8f8d;
+  --danger: #ef4444;
+  --radius: 10px;
+  --max-width: 980px;
+  --gap: 1rem;
+  --transition: 180ms ease;
+}
         * {
             margin: 0;
             padding: 0;
@@ -211,8 +223,8 @@
             </div>
 
             <div class="form-group">
-                <label for="lastName">Last Name *</label>
-                <input type="text" id="lastName" name="lastName" required>
+                <label for="Surname">Last Name *</label>
+                <input type="text" id="Surname" name="Surname" required>
             </div>
 
             <div class="form-group full-width">
