--- a/form.html
+++ b/form.html
@@ -74,7 +74,7 @@
 
         input[type="text"],
         input[type="email"],
-        input[type="phone"],
+        input[type="tel"],
         input[type="date"],
         input[type="number"],
         textarea,
@@ -90,7 +90,7 @@
 
         input[type="text"]:focus,
         input[type="email"]:focus,
-        input[type="phone"]:focus,
+        input[type="tel"]:focus,
         input[type="date"]:focus,
         input[type="number"]:focus,
         textarea:focus,
