--- a/form.html
+++ b/form.html
@@ -74,7 +74,7 @@
 
         input[type="text"],
         input[type="email"],
-        input[type="tel"],
+        input[type="phone"],
         input[type="date"],
         input[type="number"],
         textarea,
@@ -90,7 +90,7 @@
 
         input[type="text"]:focus,
         input[type="email"]:focus,
-        input[type="tel"]:focus,
+        input[type="phone"]:focus,
         input[type="date"]:focus,
         input[type="number"]:focus,
         textarea:focus,
@@ -234,7 +234,7 @@
 
             <div class="form-group">
                 <label for="phone">Phone Number</label>
-                <input type="tel" id="phone" name="phone">
+                <input type="phone" id="phone" name="phone">
             </div>
 
             <div class="form-group">
