--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 
     <footer>
       <div>© Marianville Secondary School</div>
-      <div class="sub">Design system • Designed by Luis Marampau</div>
+      <div class="sub">Design system • Designed by Mr. Marampau</div>
     </footer>
   </div>
 </body>
