--- a/form.html
+++ b/form.html
@@ -218,28 +218,28 @@
 
         <form id="schoolForm" class="form-grid">
             <div class="form-group">
-                <label for="firstName">First Name *</label>
-                <input type="text" id="firstName" name="firstName" required>
+                <label for="Gname">First Name *</label>
+                <input type="text" id="Gname" name="Gname" required>
             </div>
 
             <div class="form-group">
-                <label for="Surname">Last Name *</label>
+                <label for="Surname">Surname *</label>
                 <input type="text" id="Surname" name="Surname" required>
             </div>
 
             <div class="form-group full-width">
                 <label for="email">Email *</label>
-                <input type="email" id="email" name="email" required>
+                <input type="email" id="email" name="email">
             </div>
 
             <div class="form-group">
-                <label for="phone">Phone Number</label>
-                <input type="phone" id="phone" name="phone">
+                <label for="contact_number">Phone Number</label>
+                <input type="text" id="contact_number" name="contact_number">
             </div>
 
             <div class="form-group">
-                <label for="dateOfBirth">Date of Birth</label>
-                <input type="date" id="dateOfBirth" name="dateOfBirth">
+                <label for="dob">Date of Birth</label>
+                <input type="date" id="dob" name="dob">
             </div>
 
             <div class="form-group full-width">
