--- a/form.html
+++ b/form.html
@@ -242,6 +242,42 @@
                 <input type="date" id="dob" name="dob">
             </div>
 
+
+
+            
+
+            <h3>Parent / Guardian Information</h3>
+
+<div class="form-group">
+  <label>Father's Name</label>
+  <input type="text" name="father_name">
+</div>
+
+<div class="form-group">
+  <label>Father's Occupation</label>
+  <input type="text" name="father_occupation">
+</div>
+
+<div class="form-group">
+  <label>Father's Email</label>
+  <input type="email" name="father_email">
+</div>
+
+<div class="form-group">
+  <label>Mother's Name</label>
+  <input type="text" name="mother_name">
+</div>
+
+<div class="form-group">
+  <label>Mother's Contact</label>
+  <input type="text" name="mother_contact_number">
+</div>
+
+
+
+
+            
+
             <div class="form-group full-width">
                 <label for="address">Address</label>
                 <input type="text" id="address" name="address">
