--- a/form.html
+++ b/form.html
@@ -301,6 +301,12 @@
                 </div>
             </div>
 
+<label>Transport Mode</label>
+<label><input type="radio" name="transport" value="School Bus"> School Bus</label>
+<label><input type="radio" name="transport" value="Private"> Private</label>
+
+            
+
             <div class="form-group full-width">
                 <label>Interests (Select all that apply)</label>
                 <div class="checkbox-group">
