--- a/form.html
+++ b/form.html
@@ -329,6 +329,14 @@
                 </div>
             </div>
 
+
+<label>Interests</label>
+<label><input type="checkbox" name="interests[]" value="Sports"> Sports</label>
+<label><input type="checkbox" name="interests[]" value="Arts"> Arts</label>
+<label><input type="checkbox" name="interests[]" value="Science"> Science</label>
+
+            
+
             <div class="form-group full-width">
                 <label for="comments">Additional Comments</label>
                 <textarea id="comments" name="comments"></textarea>
