--- a/form.html
+++ b/form.html
@@ -344,6 +344,14 @@
 
             <button type="submit">Submit Form</button>
         </form>
+
+<div id="confirmation" style="display:none">
+  <h2>Registration Submitted ✅</h2>
+  <p>Thank you. Your registration has been received.</p>
+</div>
+
+
+        
     </div>
 
    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
