--- a/form.html
+++ b/form.html
@@ -217,6 +217,8 @@
         </div>
 
         <form id="schoolForm" class="form-grid">
+            <input type="text" name="website" style="display:none">
+
             <div class="form-group">
                 <label for="Gname">First Name *</label>
                 <input type="text" id="Gname" name="Gname" required>
