--- a/form.html
+++ b/form.html
@@ -6,6 +6,23 @@
 <title>Marianville Secondary School – Registration Form</title>
 
 <style>
+  :root{
+  --bg: #f5f7fb;
+  --card: #ffffff;
+  --muted: #6b7280;
+  --accent: #0ea5a4; /* teal */
+  --accent-600: #0b8f8d;
+  --danger: #ef4444;
+  --radius: 10px;
+  --max-width: 980px;
+  --gap: 1rem;
+  --transition: 180ms ease;
+}
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
 *{box-sizing:border-box;margin:0;padding:0}
 
 body{
