--- a/form.html
+++ b/form.html
@@ -153,7 +153,7 @@ button{
 
 <div class="form-group">
   <label>Contact Number</label>
-  <input type="text" name="contact_number">
+  <input type="phone" name="contact_number">
 </div>
 
 <div class="form-group">
