--- a/form.html
+++ b/form.html
@@ -148,19 +148,20 @@ button{
 
 <h3>Parent Information</h3>
 
-<div class="form-group"><label>Father Name</label><input name="father_name"></div>
-<div class="form-group"><label>Father Occupation</label><input name="father_occupation"></div>
-<div class="form-group"><label>Employer Name</label><input name="employer_name"></div>
-<div class="form-group"><label>Place of Origin</label><input name="place_of_origin"></div>
-<div class="form-group"><label>Contact Number</label><input name="contact_number"></div>
-<div class="form-group"><label>Father Email</label><input type="email" name="father_email"></div>
+<div class="form-group"><label>Father's Name</label><input name="father_name"></div>
+<div class="form-group"><label>Father's Occupation</label><input name="father_occupation"></div>
+<div class="form-group"><label>Father's Employer</label><input name="employer_name"></div>
+<div class="form-group"><label>Father's Place of Origin</label><input name="place_of_origin"></div>
+<div class="form-group"><label>Father's Contact</label><input name="contact_number"></div>
+<div class="form-group"><label>Father's Email</label><input type="email" name="father_email"></div>
+  <hr> <br>
 
-<div class="form-group"><label>Mother Name</label><input name="mother_name"></div>
-<div class="form-group"><label>Mother Occupation</label><input name="mother_occupation"></div>
-<div class="form-group"><label>Mother Employer</label><input name="mother_employer_name"></div>
-<div class="form-group"><label>Mother Origin</label><input name="mother_place_of_origin"></div>
-<div class="form-group"><label>Mother Contact</label><input name="mother_contact_number"></div>
-<div class="form-group"><label>Mother Email</label><input type="email" name="mother_email"></div>
+<div class="form-group"><label>Mother's Name</label><input name="mother_name"></div>
+<div class="form-group"><label>Mother's Occupation</label><input name="mother_occupation"></div>
+<div class="form-group"><label>Mother's Employer</label><input name="mother_employer_name"></div>
+<div class="form-group"><label>Mother's Place of Origin</label><input name="mother_place_of_origin"></div>
+<div class="form-group"><label>Mother's Contact</label><input name="mother_contact_number"></div>
+<div class="form-group"><label>Mother's Email</label><input type="email" name="mother_email"></div>
 
 <h3>Guardian</h3>
 
