--- a/form.html
+++ b/form.html
@@ -198,7 +198,7 @@ const successMessage = document.getElementById("successMessage");
 const errorMessage = document.getElementById("errorMessage");
 
 const SUPABASE_URL = "https://db.htbxnypwbgiwkwmqezmr.supabase.co";
-const SUPABASE_ANON_KEY = "YOUR_ANON_KEY"; // keep your existing key if desired
+const SUPABASE_ANON_KEY = "sb_publishable_FqI3J_47_SnMiiXEQLahGQ_sCElz4qZ"; // keep your existing key if desired
 
 // Properly get createClient from the imported library
 const { createClient } = supabase;
