--- a/form.html
+++ b/form.html
@@ -194,83 +194,84 @@ button{
 
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <script>
-  // Properly get createClient from the imported library
-
-const supabase = createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 const successMessage = document.getElementById("successMessage");
 const errorMessage = document.getElementById("errorMessage");
 
 const SUPABASE_URL = "https://db.htbxnypwbgiwkwmqezmr.supabase.co";
-const SUPABASE_ANON_KEY = "sb_publishable_FqI3J_47_SnMiiXEQLahGQ_sCElz4qZ"; // keep your existing key if desired
+const SUPABASE_ANON_KEY = "sb_publishable_FqI3J_47_SnMiiXEQLahGQ_sCElz4qZ";
 
+const supabase = window.supabase.createClient(
+  SUPABASE_URL,
+  SUPABASE_ANON_KEY
+);
 
-
-document.getElementById("schoolForm").addEventListener("submit", async e => {
+document.getElementById("schoolForm").addEventListener("submit", async (e) => {
   e.preventDefault();
-  const data = Object.fromEntries(new FormData(e.target));
-  // remove honeypot
-  delete data.website;
 
-  // Build explicit payload matching your DB columns
+  // ✅ form data
+  const formData = Object.fromEntries(new FormData(e.target));
+  delete formData.website; // honeypot
+
   const payload = {
-    surname: data.surname || null,
-    Gname: data.Gname || null,
-    dob: data.dob || null,
-    age: data.age ? Number(data.age) : null,
-    school: data.school || null,
-    email: data.email || null,
-    religion: data.religion || null,
-    baptized: data.baptized || null,
-    communion: data.communion || null,
-    confirmation: data.confirmation || null,
-    section: data.section || null,
-    allotment: data.allotment || null,
-    block: data.block || null,
-    house_number: data.house_number || null,
-    road: data.road || null,
-    unit: data.unit || null,
-    suburban: data.suburban || null,
-    father_name: data.father_name || null,
-    father_occupation: data.father_occupation || null,
-    employer_name: data.employer_name || null,
-    place_of_origin: data.place_of_origin || null,
-    contact_number: data.contact_number || null,
-    father_email: data.father_email || null,
-    mother_name: data.mother_name || null,
-    mother_occupation: data.mother_occupation || null,
-    mother_employer_name: data.mother_employer_name || null,
-    mother_place_of_origin: data.mother_place_of_origin || null,
-    mother_contact_number: data.mother_contact_number || null,
-    mother_email: data.mother_email || null,
-    guardian_name: data.guardian_name || null,
-    guardian_occupation: data.guardian_occupation || null,
-    guardian_relationship: data.guardian_relationship || null,
-    guardian_place_of_origin: data.guardian_place_of_origin || null,
-    guardian_contact_number: data.guardian_contact_number || null,
-    guardian_email: data.guardian_email || null,
-    emergency_contact_name: data.emergency_contact_name || null,
-    emergency_relationship: data.emergency_relationship || null,
-    emergency_contact_number: data.emergency_contact_number || null,
-    transport: data.transport || null,
-    mode: data.mode || null,
-    agree_transport: data.agree_transport || null
-    // created_at is defaulted by the DB, do not set it here
+    surname: formData.surname || null,
+    Gname: formData.Gname || null,
+    dob: formData.dob || null,
+    age: formData.age ? Number(formData.age) : null,
+    school: formData.school || null,
+    email: formData.email || null,
+    religion: formData.religion || null,
+    baptized: formData.baptized || null,
+    communion: formData.communion || null,
+    confirmation: formData.confirmation || null,
+    section: formData.section || null,
+    allotment: formData.allotment || null,
+    block: formData.block || null,
+    house_number: formData.house_number || null,
+    road: formData.road || null,
+    unit: formData.unit || null,
+    suburban: formData.suburban || null,
+    father_name: formData.father_name || null,
+    father_occupation: formData.father_occupation || null,
+    employer_name: formData.employer_name || null,
+    place_of_origin: formData.place_of_origin || null,
+    contact_number: formData.contact_number || null,
+    father_email: formData.father_email || null,
+    mother_name: formData.mother_name || null,
+    mother_occupation: formData.mother_occupation || null,
+    mother_employer_name: formData.mother_employer_name || null,
+    mother_place_of_origin: formData.mother_place_of_origin || null,
+    mother_contact_number: formData.mother_contact_number || null,
+    mother_email: formData.mother_email || null,
+    guardian_name: formData.guardian_name || null,
+    guardian_occupation: formData.guardian_occupation || null,
+    guardian_relationship: formData.guardian_relationship || null,
+    guardian_place_of_origin: formData.guardian_place_of_origin || null,
+    guardian_contact_number: formData.guardian_contact_number || null,
+    guardian_email: formData.guardian_email || null,
+    emergency_contact_name: formData.emergency_contact_name || null,
+    emergency_relationship: formData.emergency_relationship || null,
+    emergency_contact_number: formData.emergency_contact_number || null,
+    transport: formData.transport || null,
+    mode: formData.mode || null,
+    agree_transport: formData.agree_transport || null
   };
 
- const { data, error } = await supabase.from("app_users").insert([payload]);
+  const { data: insertedData, error } = await supabase
+    .from("app_users")
+    .insert([payload]);
 
-if (error) {
-  console.log('Error inserting data:', error);
-  errorMessage.textContent = error.message;
-  errorMessage.style.display = "block";
-  successMessage.style.display = "none";
-} else {
-  console.log('Data inserted successfully:', data);  // Add this line to check success
-  successMessage.style.display = "block";
-  errorMessage.style.display = "none";
-  e.target.reset();
-}
-
+  if (error) {
+    console.error(error);
+    errorMessage.textContent = error.message;
+    errorMessage.style.display = "block";
+    successMessage.style.display = "none";
+  } else {
+    successMessage.style.display = "block";
+    errorMessage.style.display = "none";
+    e.target.reset();
+    console.log("Inserted:", insertedData);
+  }
+});
 </script>
 
 </body>
