--- a/form.html
+++ b/form.html
@@ -210,7 +210,7 @@ button{
 </form>
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+
 <script>
 const successMessage = document.getElementById("successMessage");
 const errorMessage = document.getElementById("errorMessage");
@@ -218,15 +218,12 @@ const errorMessage = document.getElementById("errorMessage");
 const SUPABASE_URL = "https://db.htbxnypwbgiwkwmqezmr.supabase.co";
 const SUPABASE_ANON_KEY = "sb_publishable_FqI3J_47_SnMiiXEQLahGQ_sCElz4qZ";
 
-const supabase = window.supabase.createClient(
-  SUPABASE_URL,
-  SUPABASE_ANON_KEY
-);
+const supabase = window.supabase.createClient(SUPABASE_URL,SUPABASE_ANON_KEY);
 
 document.getElementById("schoolForm").addEventListener("submit", async (e) => {
   e.preventDefault();
 
-  // ✅ form data
+  // form data
   const formData = Object.fromEntries(new FormData(e.target));
   delete formData.website; // honeypot
 
