--- a/form.html
+++ b/form.html
@@ -120,7 +120,7 @@ button{
   <label for="religion">Religion</label>
   <input id="religion" name="religion">
 </div>
-#//////////////////////////////////////////////////////////////
+
 
 <div class="form-group">
   <label for="baptized">Baptized</label>
@@ -148,7 +148,7 @@ button{
     <option>No</option>
   </select>
 </div>
-#///////////////////////////////////////////////////////////////
+/*//////////////////////////////////////////////////////////////*/
 
 <h3>Address</h3>
 
@@ -210,6 +210,8 @@ button{
 </form>
 </div>
 
+  
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
 <script>
 const successMessage = document.getElementById("successMessage");
