--- a/form.html
+++ b/form.html
@@ -218,10 +218,8 @@ button{
 const successMessage = document.getElementById("successMessage");
 const errorMessage = document.getElementById("errorMessage");
 
-const SUPABASE_URL = "https://db.htbxnypwbgiwkwmqezmr.supabase.co";
-const SUPABASE_ANON_KEY = "sb_publishable_FqI3J_47_SnMiiXEQLahGQ_sCElz4qZ";
 
-const supabase = createClient(SUPABASE_URL,SUPABASE_ANON_KEY);
+const supabase = createClient("https://db.htbxnypwbgiwkwmqezmr.supabase.co","sb_publishable_FqI3J_47_SnMiiXEQLahGQ_sCElz4qZ");
 
 document.getElementById("schoolForm").addEventListener("submit", async (e) => {
   e.preventDefault();
