--- a/form.html
+++ b/form.html
@@ -219,7 +219,7 @@ const successMessage = document.getElementById("successMessage");
 const errorMessage = document.getElementById("errorMessage");
 
 
-const supabase = createClient("https://db.htbxnypwbgiwkwmqezmr.supabase.co","sb_publishable_FqI3J_47_SnMiiXEQLahGQ_sCElz4qZ");
+const supabase = supabase.createClient("https://db.htbxnypwbgiwkwmqezmr.supabase.co","eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imh0YnhueXB3Ymdpd2t3bXFlem1yIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjUyODk1ODUsImV4cCI6MjA4MDg2NTU4NX0.ZUqnPruYOfIz_VVAILWZxsE9k9aqM0ruLllLm-Bnqvg");
 
 document.getElementById("schoolForm").addEventListener("submit", async (e) => {
   e.preventDefault();
